--- a/vignettes/introduction_to_phenopath.Rmd
+++ b/vignettes/introduction_to_phenopath.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to PhenoPath"
 author: "Kieran R Campbell"
-date: "2017-6-6"
+date: "July 2017"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
@@ -9,90 +9,118 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+```{r load-pacakges}
+suppressPackageStartupMessages(library(dplyr))
+suppressPackageStartupMessages(library(ggplot2))
+suppressPackageStartupMessages(library(tidyr))
+suppressPackageStartupMessages(library(forcats))
+# library(phenopath)
+```
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
+## Overview of PhenoPath
 
 ## Example on simulated data
 
-```{r simulate-data, eval = FALSE}
+### Simulating data
+
+We can simulate data via a call to `simulate_phenopath()`:
+
+```{r simulate-data}
 set.seed(123L)
 devtools::load_all("~/oxford/phenopath/")
 sim <- simulate_phenopath()
 ```
 
-See results:
+Structure:
 
-```{r see-results, eval = FALSE}
-fit <- phenopath(sim$y, sim$x, z_init = sim$z,elbo_tol = 1e-7)
+```{r sim-structure}
+print(str(sim))
 ```
 
-plot results
+```{r some-genes, fig.width = 7}
+df_gex <- tbl_df(sim$y[,c(1,3,11,13,21,23,31,33)]) %>% 
+  mutate(x = factor(sim[['x']]), z = sim[['z']]) %>% 
+  gather(gene, expression, -x, -z)
 
-```{r plot-results, eval = FALSE}
-plot(sim$z, fit$m_z)
+ggplot(df_gex, aes(x = z, y = expression, color = x)) +
+  geom_point() +
+  facet_wrap(~ gene, nrow = 2) +
+  scale_color_brewer(palette = "Set1")
+```
+
+```{r pcaing, fig.show = 'hold'}
+pca_df <- tbl_df(prcomp(sim$y)$x[,1:2]) %>% 
+  mutate(x = factor(sim[['x']]), z = sim[['z']])
+
+ggplot(pca_df, aes(x = PC1, y = PC2, color = x)) +
+  geom_point()
+
+ggplot(pca_df, aes(x = PC1, y = PC2, color = z)) +
+  geom_point()
+```
+
+
+### Fit PhenoPath model
+
+```{r see-results, cache=TRUE}
+fit <- phenopath(sim$y, sim$x, z_init = sim$z,elbo_tol = 1e-6, thin = 40)
+```
+
+plot elbo
+
+```{r plot-elbo}
+plot_elbo(fit)
+```
+
+### Examining results
+
+```{r plot-results, fig.show = 'hold'}
+qplot(sim$z, fit$m_z) +
+  xlab("True z") + ylab("Phenopath z")
+qplot(sim$z, pca_df$PC1) +
+  xlab("True z") + ylab("PC1")
+```
+
+
+```{r print-correlation}
 cor(sim$z, fit$m_z)
 ```
 
-0.9980693
+df beta
 
-PCA
+```{r beta-df, fig.width = 5.3}
+gene_names <- paste0("gene", seq_len(ncol(fit$m_beta)))
+df_beta <- data_frame(beta = fit$m_beta[1,],
+                      beta_sd = sqrt(fit$s_beta[1,]),
+                      gene = gene_names)
+df_beta$gene <- fct_relevel(df_beta$gene, gene_names)
 
-```{r sim-pca, eval = F}
-sim <- simulate_phenopath(N = 200, 
-                          G_de = 0, G_pst = 100, G_pst_beta = 10,
-                          G_de_pst_beta = 10)
-
-pca_df <- as_data_frame(prcomp(sim$y)$x[,1:2]) %>% 
-  mutate(z = sim[['z']], x = sim[['x']])
-
-ggplot(pca_df, aes(x = PC1, y = PC2, color = z)) +
-  geom_point() 
-
-ggplot(pca_df, aes(x = PC1, y = PC2, color = factor(x))) +
-  geom_point() 
+ggplot(df_beta, aes(x = gene, y = beta)) + 
+  geom_point() +
+  geom_errorbar(aes(ymin = beta - 2 * beta_sd, ymax = beta + 2 * beta_sd)) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1),
+        axis.title.x = element_blank()) +
+  ylab(expression(beta))
 ```
 
-## Vignette Info
+Sigints
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
+```{r sig-inters, fig.width = 6}
+sig_ints <- significant_interactions(fit)
+df_beta$is_sig <- sig_ints
 
-## Styles
-
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
-
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
-
-## Figures
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+ggplot(df_beta, aes(x = gene, y = beta, color = is_sig)) + 
+  geom_point() +
+  geom_errorbar(aes(ymin = beta - 2 * beta_sd, ymax = beta + 2 * beta_sd)) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1),
+        axis.title.x = element_blank()) +
+  ylab(expression(beta)) +
+  scale_color_brewer(palette = "Set2", name = "Significant")
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
 
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
+## Technical
 
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
-
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
+```{r sessioninfo}
+sessionInfo()
 ```
-
-Also a quote using `>`:
-
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
