--- a/vignettes/introduction_to_phenopath.Rmd
+++ b/vignettes/introduction_to_phenopath.Rmd
@@ -2,40 +2,63 @@
 title: "Introduction to PhenoPath"
 author: "Kieran R Campbell"
 date: "July 2017"
-output: rmarkdown::html_vignette
+output: BiocStyle::html_document
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+bibliography: bibliography.bib
 ---
 
-```{r load-pacakges}
+```{r load-packages, include=FALSE}
+knitr::opts_chunk$set(fig.width = 5, fig.height = 3)
+
 suppressPackageStartupMessages(library(dplyr))
 suppressPackageStartupMessages(library(ggplot2))
 suppressPackageStartupMessages(library(tidyr))
 suppressPackageStartupMessages(library(forcats))
-# library(phenopath)
+devtools::load_all("~/oxford/phenopath/") # library(phenopath)
 ```
 
-## Overview of PhenoPath
+# Overview of PhenoPath
 
-## Example on simulated data
+## The PhenoPath model
 
-### Simulating data
+PhenoPath models gene expression expression $y$ in terms of a latent pathway score (pseudotime) $z$. Uniquely, the evolution of genes along the trajectory isn't common to each gene but can be perturbed by an additional sample-specific covariate $\beta$. For example, this could be the mutational status of each sample or a drug that each sample was exposed to.
 
-We can simulate data via a call to `simulate_phenopath()`:
+<img src="phenopath_model.png" width="500"/>
+
+This software infers both the latent pathway scores $z_n$ and interaction coefficients $\beta_{pg}$ for samples $n = 1, \ldots, N$, covariates $p = 1, \ldots, P$ and genes $G = 1, \ldots, G$.
+
+## Mean-field variational inference
+
+Inference is performed using co-ordinate ascent mean field variational inference. This attempts to find a set of approximating distributions $q(\mathbf{\theta}) = \prod_i q_i(\theta_i)$ for each variable $i$ by minimising the KL divergence between the KL divergence between the variational distribution and the true posterior. For a good overview of variational inference see @blei2016variational.
+
+# Example on simulated data
+
+## Simulating data
+
+We can simulate data according to the PhenoPath model via a call to `simulate_phenopath()`:
 
 ```{r simulate-data}
 set.seed(123L)
-devtools::load_all("~/oxford/phenopath/")
 sim <- simulate_phenopath()
 ```
 
-Structure:
+This returns a list with four entries:
 
 ```{r sim-structure}
 print(str(sim))
 ```
+
+* `parameters` is a data frame with the simulated parameters, with a column for each of the parameters $\alpha$, $\beta$ and $\lambda$, and a row for each gene. There is an additional column specifying from which regime that gene has been simulated (see `?simulate_phenopath` for details).
+* `y` is the $N \times G$ matrix of gene expression
+* `x` is the $N$-length vector of covariates
+* `z` is the true latent pseudotimes
+
+By default this simulates the model for $N= 100$ cells and $G=40$ genes.
+
+For 8 representative genes we can visualise what the expression looks like over pseudotime:
 
 ```{r some-genes, fig.width = 7}
 df_gex <- tbl_df(sim$y[,c(1,3,11,13,21,23,31,33)]) %>% 
@@ -48,66 +71,75 @@ ggplot(df_gex, aes(x = z, y = expression, color = x)) +
   scale_color_brewer(palette = "Set1")
 ```
 
+We see for the first two genes there is differential expression only, genes 3 and 4 show a pseudotime dependence, genes 5 and 6 show pseudotime-covariate interactions (but marginally no differential expression), while genes 7 and 8 show differential expression, pseudotime dependence and pseudotime-covariate interactions.
+
+We can further plot this in PCA space, coloured by both covariate and pseudotime to get an idea of how these look in the reduced dimension:
+
 ```{r pcaing, fig.show = 'hold'}
 pca_df <- tbl_df(prcomp(sim$y)$x[,1:2]) %>% 
   mutate(x = factor(sim[['x']]), z = sim[['z']])
 
 ggplot(pca_df, aes(x = PC1, y = PC2, color = x)) +
-  geom_point()
+  geom_point() + scale_colour_brewer(palette = "Set1")
 
 ggplot(pca_df, aes(x = PC1, y = PC2, color = z)) +
   geom_point()
 ```
 
 
-### Fit PhenoPath model
+## Fit PhenoPath model
+
+PhenoPath fits models with a call to the `phenopath` function, which requires at least an expression matrix `y` and a covariate vector `x`. For use with `ExpressionSets` see the [section on input formats](#inputdata). For this example we choose an ELBO tolerance of `1e-6` and ELBO calculations thinned by `40`. A discussion of how to control variational inference can be found [below](#varcontrol).
 
 ```{r see-results, cache=TRUE}
-fit <- phenopath(sim$y, sim$x, z_init = sim$z,elbo_tol = 1e-6, thin = 40)
+fit <- phenopath(sim$y, sim$x, elbo_tol = 1e-6, thin = 40)
+print(fit)
 ```
 
-plot elbo
+The `phenopath` function will print progress on iterations, ELBO, and % change in ELBO that may be turned off by setting `verbose = FALSE` in the call.
+
+Once the model has been fit it is important to check convergence with a call to `plot_elbo(fit)` to ensure the ELBO is approximately flat:
 
 ```{r plot-elbo}
 plot_elbo(fit)
 ```
 
-### Examining results
+## Examining results
 
-```{r plot-results, fig.show = 'hold'}
+
+The posterior mean estimates of the pseudotimes $z$ sit in `fit$m_z`. We can visualise these compared to both the true pseudotimes and the first principal component of the data:
+
+```{r plot-results, fig.show = 'hold', fig.width = 2.5, fig.height = 2.5}
 qplot(sim$z, fit$m_z) +
   xlab("True z") + ylab("Phenopath z")
 qplot(sim$z, pca_df$PC1) +
   xlab("True z") + ylab("PC1")
 ```
 
+We see that this has high correlation with the true pseudotimes:
 
 ```{r print-correlation}
 cor(sim$z, fit$m_z)
 ```
 
-df beta
+Next, we're interested in the interactions between the latent space and the covariates. There are three functions to help us here:
 
-```{r beta-df, fig.width = 5.3}
+* `interaction_effects` retrieves the posterior interaction effect sizes
+* `interaction_sds` retrieves the posterior interaction standard deviations
+* `significant_interactions` applies a Bayesian significant test to the interaction parameters
+
+Note that if $P=1$ (ie there is only one covariate) each of these will return a vector, while if $P>1$ then a matrix is returned. 
+
+In our simulated data above, the first 20 genes were simulated with no interaction effect while the latter 20 were simulated with interaction effects. We can pull out the interaction effect sizes, standard deviations, and significance test results into a data frame and plot:
+
+```{r beta-df, fig.width = 6, fig.height = 3}
 gene_names <- paste0("gene", seq_len(ncol(fit$m_beta)))
-df_beta <- data_frame(beta = fit$m_beta[1,],
-                      beta_sd = sqrt(fit$s_beta[1,]),
+df_beta <- data_frame(beta = interaction_effects(fit),
+                      beta_sd = interaction_sds(fit),
+                      is_sig = significant_interactions(fit),
                       gene = gene_names)
+
 df_beta$gene <- fct_relevel(df_beta$gene, gene_names)
-
-ggplot(df_beta, aes(x = gene, y = beta)) + 
-  geom_point() +
-  geom_errorbar(aes(ymin = beta - 2 * beta_sd, ymax = beta + 2 * beta_sd)) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1),
-        axis.title.x = element_blank()) +
-  ylab(expression(beta))
-```
-
-Sigints
-
-```{r sig-inters, fig.width = 6}
-sig_ints <- significant_interactions(fit)
-df_beta$is_sig <- sig_ints
 
 ggplot(df_beta, aes(x = gene, y = beta, color = is_sig)) + 
   geom_point() +
@@ -118,9 +150,39 @@ ggplot(df_beta, aes(x = gene, y = beta, color = is_sig)) +
   scale_color_brewer(palette = "Set2", name = "Significant")
 ```
 
+A typical analysis might follow by graphing the largest effect size; we can do this as follows:
 
-## Technical
+```{r graph-largest-effect-size}
+which_largest <- which.max(df_beta$beta)
+
+df_large <- data_frame(
+  y = sim[['y']][, which_largest],
+  x = factor(sim[['x']]),
+  z = sim[['z']]
+)
+
+ggplot(df_large, aes(x = z, y = y, color = x)) +
+  geom_point() +
+  scale_color_brewer(palette = "Set1") +
+  stat_smooth()
+```
+
+# Advanced
+
+## Input data format {#inputdata}
+
+### Input matrices
+
+### `ExpressionSet`s
+
+## Initialisation of latent space
+
+## Controlling variational inference {#varcontrol}
+
+# Technical
 
 ```{r sessioninfo}
 sessionInfo()
 ```
+
+# References
