Vignette added. Fixes #2

--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -3,3 +3,14 @@
 	Journal = {arXiv preprint arXiv:1601.00670},
 	Title = {Variational inference: A review for statisticians},
 	Year = {2016}}
+	
+@article{mccarthy2017scater,
+  title={Scater: pre-processing, quality control, normalization and visualization of single-cell RNA-seq data in R},
+  author={McCarthy, Davis J and Campbell, Kieran R and Lun, Aaron TL and Wills, Quin F},
+  journal={Bioinformatics},
+  volume={33},
+  number={8},
+  pages={1179--1186},
+  year={2017},
+  publisher={Oxford University Press}
+}
